--- a/JavaApplication6/src/Proyecto/Vistas/MenuAlumno.form
+++ b/JavaApplication6/src/Proyecto/Vistas/MenuAlumno.form
@@ -63,7 +63,7 @@
                               <EmptySpace min="-2" pref="52" max="-2" attributes="0"/>
                               <Component id="jBBuscar" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <Component id="jDateFechaNac" alignment="0" min="-2" pref="143" max="-2" attributes="0"/>
+                          <Component id="jDateFechaNac" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="32767" attributes="0"/>
                   </Group>
@@ -97,8 +97,8 @@
                   <Component id="jLabel3" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="jBEstado" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace min="-2" pref="33" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" attributes="0">
+              <EmptySpace min="-2" pref="23" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="1" attributes="0">
                   <Component id="jLabel5" min="-2" max="-2" attributes="0"/>
                   <Component id="jDateFechaNac" min="-2" max="-2" attributes="0"/>
               </Group>
